# knowledgebot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS_REFERENCE.md  AGENT_FORMAT_FIX.md  ARCHITECTURE.md  BUG_FIXES_SUMMARY.md  DEPLOYMENT.md  DUPLICATE_URL_DETECTION.md  Dockerfile  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MINIMAX_MIGRATION.md  MODEL_INFO.md  PARALLEL_SETUP.md  PROJECT_STRUCTURE.txt  README.md  REDUNDANCY_FIX.md  SINGLE_CALL_FIX.md  WEB_SCRAPING_FIX.md  agent_router.py  agent_utils.py  fly.toml  indexing_worker.py  journal_agent.py  lightrag_manager.py  notes.txt  pyproject.toml  telegram_bot.py  test_agent_tools.py  test_agents.py  test_bug_fixes.py  test_minimax_function_calling.py  test_parallel_search.py  test_url_deduplication.py  verify_datetime.py  verify_jina.py  verify_linkedin.py
agents/: __init__.py  ai_engineering_agent.py  base_agent.py  career_agent.py  general_agent.py  health_agent.py  ideas_agent.py  journal_agent.py  rants_agent.py  wealth_agent.py
config/: lightrag_production.py
core/: __init__.py  cache.py  config.py  database.py  embeddings.py  llm_client.py  retriever.py  router.py  url_utils.py
scripts/: check_production_config.py  init_postgres.sql  init_production_db.py  migrate_indexed_urls.py  migrate_to_production.py  monitor_free_tier.py  parse_connection_string.py  test_db_connection.py
tools/: __init__.py  common_tools.py  rag_tools.py
