[project]
name = "telegram-exp"
version = "0.1.0"
description = "A Telegram bot project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.1",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "agno>=0.9.0",
    "sqlalchemy>=2.0.0",
    "lightrag-hku>=0.0.1",
    "nano-vectordb>=0.0.4",  # Dev mode only
    "networkx>=3.0",  # Dev mode only
]

[project.optional-dependencies]
# Production database dependencies
production = [
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter
    "asyncpg>=0.29.0",  # Async PostgreSQL for LightRAG
    "pgvector>=0.2.0",  # pgvector Python library for vector operations
    "neo4j>=5.15.0",  # Neo4j graph database
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
